<resources>
    <string name="app_name">The Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_your_mail">Enter your mail</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="new_account">New account</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="shoes_store">Shoes Store</string>
    <string name="this_app_shows_you_a_variety_of_shoes_n_check_it_s_awsome_features">This app shows you a variety of shoes\n Check it\'s awesome features!</string>
    <string name="next">Next</string>
    <string name="tips_and_tricks">Tips and Tricks</string>
    <string name="you_can_click_the_add_button_to_add_a_desired_model">You can click the add button to add a desired model</string>
    <string name="okey">Okey</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="enter_shoe_size">Enter shoe size</string>
    <string name="size">Size</string>
    <string name="company_name">Company Name</string>
    <string name="enter_shoe_company_name">Enter shoe company name</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_shoe_description">Enter shoe description</string>
</resources>