<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="com.mohamedalaa4j.theshoestore.DoubleConverter"/>
        <variable
            name="ShoeListViewModel"
            type="com.mohamedalaa4j.theshoestore.ShoeListViewModel"/>
    </data>
    <!-- LinearLayout is used because it is a simple layout with vertical orientated children-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/pink"
        android:padding="@dimen/layout_padding"
        tools:context=".NewShoeDetailFragment">

        <TextView
            android:id="@+id/tvName"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_shoe_name"
            android:inputType="text"
            android:text="@={ShoeListViewModel.name}"
            android:textColorHint="@color/dark_blue" />

        <TextView
            android:id="@+id/tvSize"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/size" />

        <EditText
            android:id="@+id/etSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_shoe_name"
            android:inputType="number"
            android:text="@={DoubleConverter.doubleToString(ShoeListViewModel.size)}"
            android:textColorHint="@color/dark_blue" />

        <TextView
            android:id="@+id/tvCompanyName"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/company_name" />

        <EditText
            android:id="@+id/etCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_shoe_company_name"
            android:inputType="text"
            android:text="@={ShoeListViewModel.companyName}"
            android:textColorHint="@color/dark_blue" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_shoe_description"
            android:inputType="text"
            android:text="@={ShoeListViewModel.description}"
            android:textColorHint="@color/dark_blue" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/add"
            />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/cancel"
            />

    </LinearLayout>
</layout>